РћР±РЅРѕРІР»РµРЅРёРµ РјРµРЅСЋ РєРѕРєС‚РµР№Р»РµР№ Рё С€РѕС‚РѕРІ: РІРµСЃРЅР°-Р»РµС‚Рѕ 2025

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -677,49 +677,49 @@
         const cocktailResults = {
             cocktail68: {
                 name: 'Клубничный Имбирь #68',
-                desc: 'Свежий ягодный коктейль с лёгкой пряностью',
+                desc: 'Свежий ягодный коктейль с легкой пряностью и ароматом зелени',
                 image: '<%= safe_asset_path('cocktails/cocktail68.png') %>',
                 types: ['berry', 'party', 'light']
             },
             cocktail69: {
                 name: 'Апельсин Кофе #69',
-                desc: 'Свежий, лёгкий сладкий коктейль',
+                desc: 'Свежий, легкий сладкий коктейль с апельсиново-кофейным вкусом',
                 image: '<%= safe_asset_path('cocktails/cocktail69.png') %>',
                 types: ['citrus', 'calm', 'surprise']
             },
             cocktail70: {
                 name: 'Яблоко Травы #70',
-                desc: 'Свежий травянистый коктейль с яблочным послевкусием',
+                desc: 'Свежий травянистый коктейль с мягким яблочным послевкусием и приятно кислинкой',
                 image: '<%= safe_asset_path('cocktails/cocktail70.png') %>',
                 types: ['herb', 'calm', 'light']
             },
             cocktail71: {
                 name: 'Клубника Перец #71',
-                desc: 'Свежий, кислый, лёгкий коктейль',
+                desc: 'Свежий, кислый, легкий коктейль с ярким вкусом клубники, болгарского перца и приятной кислинкой',
                 image: '<%= safe_asset_path('cocktails/cocktail71.png') %>',
                 types: ['pepper', 'party', 'surprise']
             },
             shot1: {
-                name: 'Кофе-Апельсин Шот',
-                desc: 'Крепкий сладкий шот',
+                name: 'Шот Бамбл',
+                desc: 'Крепкий кисло-сладкий шот',
                 image: '<%= safe_asset_path('cocktails/shot1.png') %>',
                 types: ['citrus', 'party', 'surprise']
             },
             shot2: {
-                name: 'Тирамису Шот',
-                desc: 'Лёгкий, сливочный десертный шот',
+                name: 'Шот Укроп',
+                desc: 'Свежий шот, средней крепости',
                 image: '<%= safe_asset_path('cocktails/shot2.png') %>',
                 types: ['citrus', 'calm', 'light']
             },
             shot3: {
-                name: 'Лимонно-Травяной Шот',
-                desc: 'Крепкий, пряный шот с кислинкой',
+                name: 'Шот Лимонно Травяной',
+                desc: 'Крепкий, пряный шот с приятной кислинкой',
                 image: '<%= safe_asset_path('cocktails/shot3.png') %>',
                 types: ['herb', 'party', 'surprise']
             },
             shot4: {
-                name: 'Апельсин Шот',
-                desc: 'Лёгкий цитрусовый шот',
+                name: 'Шот Барбарис',
+                desc: 'Легкий, кисло сладкий ягодный шот',
                 image: '<%= safe_asset_path('cocktails/shot4.png') %>',
                 types: ['citrus', 'light', 'party']
             }
